--- a/.github/workflows/remove-deployment.yml
+++ b/.github/workflows/remove-deployment.yml
@@ -1,15 +1,13 @@
-name: CD-Deploy
+name: Remove all AWS resources created from this project
 on:
-  push:
-    branches:
-      - 'main'
+  workflow_dispatch:
 
 permissions:
     id-token: write
     contents: read
 
 jobs:
-  deploy-infra:
+  remove-infra:
     if: contains('["TimBeckerAachen"]', github.actor)
     runs-on: ubuntu-latest
     steps:
@@ -24,16 +22,13 @@ jobs:
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_wrapper: false
-      - name: TF plan
-        id: tf-plan
+      - name: TF init
+        id: tf-init
         working-directory: 'infrastructure'
         run: |
-          terraform init -backend-config="key=mlops-zoomcamp-prod.tfstate" -reconfigure && terraform plan -var-file=vars/prod.tfvars
-      - name: TF Apply
-        id: tf-apply
+          terraform init -backend-config="key=mlops-zoomcamp-prod.tfstate" -reconfigure
+      - name: TF destroy
+        id: tf-destroy
         working-directory: 'infrastructure'
-        if: ${{ steps.tf-plan.outcome }} == 'success'
         run: |
-          terraform apply -auto-approve -var-file=vars/prod.tfvars
-          echo "::set-output name=model_bucket::$(terraform output model_bucket | xargs)"
-          echo "::set-output name=lambda_function::$(terraform output lambda_function | xargs)"
+          terraform destroy -auto-approve -var-file=vars/prod.tfvars
