--- a/.github/workflows/remove-deployment.yml
+++ b/.github/workflows/remove-deployment.yml
@@ -6,6 +6,9 @@ permissions:
     id-token: write
     contents: read
 
+env:
+  LAMBDA_PATH: ../predict-stocks/src/predict_lambda/"
+
 jobs:
   remove-infra:
     if: contains('["TimBeckerAachen"]', github.actor)
@@ -13,6 +16,10 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
+      - name: Set lambda path in vars file
+        working-directory: 'infrastructure'
+        run: |
+          sed -i 's/replace_lambda_path/${{ env.LAMBDA_PATH }}lambda_function.zip/g' vars/prod.tfvars
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -26,7 +33,7 @@ jobs:
         id: tf-init
         working-directory: 'infrastructure'
         run: |
-          terraform init -backend-config="key=mlops-zoomcamp-prod.tfstate" -reconfigure
+          terraform init -backend-config="key=predict-stocks-prod.tfstate" -reconfigure
       - name: TF destroy
         id: tf-destroy
         working-directory: 'infrastructure'
