--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ permissions:
     contents: read
 
 env:
-  LAMBDA_PATH: ../predict-stocks/src/predict_lambda/"
+  LAMBDA_PATH: ../predict-stocks/src/predict_lambda/
 
 jobs:
   deploy-infra:
