--- a/.github/workflows/remove-deployment.yml
+++ b/.github/workflows/remove-deployment.yml
@@ -7,7 +7,7 @@ permissions:
     contents: read
 
 env:
-  LAMBDA_PATH: ../predict-stocks/src/predict_lambda/"
+  LAMBDA_PATH: ../predict-stocks/src/predict_lambda/
 
 jobs:
   remove-infra:
