--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Set Prefect credentials and lambda path in vars file
         working-directory: 'infrastructure'
         run: |
-          sed -i 's/replace_prefect_key/${{ secrets.PREFECT_API_KEY }}/g' vars/prod.tfvars \
-          sed -i 's/replace_prefect_url/${{ secrets.PREFECT_API_URL }}/g' vars/prod.tfvars \
-          REPLACEMENT="${{ env.LAMBDA_PATH }}lambda_function.zip" \
-          echo $REPLACEMENT \
+          sed -i 's/replace_prefect_key/${{ secrets.PREFECT_API_KEY }}/g' vars/prod.tfvars
+          sed -i 's/replace_prefect_url/${{ secrets.PREFECT_API_URL }}/g' vars/prod.tfvars
+          REPLACEMENT="${{ env.LAMBDA_PATH }}lambda_function.zip"
+          echo $REPLACEMENT
           sed -i "s|replace_lambda_path|$REPLACEMENT|g" vars/prod.tfvars
       - name: zip lambda with requirements
         working-directory: 'infrastructure'
