--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,16 @@ jobs:
           sed -i 's|replace_prefect_key|${{ secrets.PREFECT_API_KEY }}|g' vars/prod.tfvars
           sed -i 's|replace_prefect_url|${{ secrets.PREFECT_API_URL }}|g' vars/prod.tfvars
           REPLACEMENT="${{ env.LAMBDA_PATH }}lambda_function.zip"
-          echo $REPLACEMENT
           sed -i "s|replace_lambda_path|$REPLACEMENT|g" vars/prod.tfvars
       - name: zip lambda with requirements
         working-directory: 'infrastructure'
         run: |
-          cd ${{ env.LAMBDA_PATH }} \
-          mkdir package \
-          pip install --target ./package -r ../../../requirements.txt \
-          cd package \
-          zip -r ../lambda_function.zip . \
-          cd .. \
+          cd ${{ env.LAMBDA_PATH }}
+          mkdir package
+          pip install --target ./package -r ../../../requirements.txt
+          cd package
+          zip -r ../lambda_function.zip .
+          cd ..
           zip lambda_function.zip index.py
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v2
