--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
           cd ..
           zip ${{ env.LAMBDA_ZIP_NAME }} index.py
           rm -r package
+          ls -lah
       - name: zip lambda layer with prefect requirements
         working-directory: 'infrastructure'
         run: |
@@ -50,6 +51,7 @@ jobs:
           zip -r ../${{ env.LAMBDA_LAYER_ZIP_NAME }} .
           cd ..
           rm -r package
+          ls -lah
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
