--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,6 @@ permissions:
 
 env:
   LAMBDA_PATH: ../predict-stocks/src/predict_lambda/
-  LAMBDA_ZIP_NAME: lambda_function.zip
   LAMBDA_LAYER_ZIP_NAME: lambda_layer_prefect.zip
 
 jobs:
@@ -25,22 +24,9 @@ jobs:
         run: |
           sed -i 's|replace_prefect_key|${{ secrets.PREFECT_API_KEY }}|g' vars/prod.tfvars
           sed -i 's|replace_prefect_url|${{ secrets.PREFECT_API_URL }}|g' vars/prod.tfvars
-          LAMBDA_PATH="${{ env.LAMBDA_PATH }}${{ env.LAMBDA_ZIP_NAME }}"
-          sed -i "s|replace_lambda_path|$LAMBDA_PATH|g" vars/prod.tfvars
+          sed -i "s|replace_lambda_path|${{ env.LAMBDA_PATH }}|g" vars/prod.tfvars
           LAMBDA_LAYER_PATH="${{ env.LAMBDA_PATH }}${{ env.LAMBDA_LAYER_ZIP_NAME }}"
           sed -i "s|replace_lambda_layer_path|$LAMBDA_PATH|g" vars/prod.tfvars
-      - name: zip lambda with requirements
-        working-directory: 'infrastructure'
-        run: |
-          cd ${{ env.LAMBDA_PATH }}
-          mkdir package
-          pip install --target ./package -r ../../../requirements.txt
-          cd package
-          zip -r ../${{ env.LAMBDA_ZIP_NAME }} .
-          cd ..
-          zip ${{ env.LAMBDA_ZIP_NAME }} index.py
-          rm -r package
-          ls -lah
       - name: zip lambda layer with prefect requirements
         working-directory: 'infrastructure'
         run: |
@@ -51,7 +37,6 @@ jobs:
           zip -r ../${{ env.LAMBDA_LAYER_ZIP_NAME }} .
           cd ..
           rm -r package
-          ls -lah
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
