--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 httpx==0.24.1
 prefect>=2.3.2
 jsonschema==4.17.3
+mlflow==2.6.0
+cloudpickle==2.2.1
+numpy==1.25.2
+psutil==5.9.5
+scikit-learn==1.3.0
+scipy==1.11.2
+yfinance==0.2.28
+boto3==1.28.30
